test/kubernetes/e2e/features/session_affinity/testdata/session_affinity.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: session-affinity
  name: session-affinity
spec:
  selector:
    matchLabels:
      app: session-affinity
  replicas: 4
  template:
    metadata:
      labels:
        app: session-affinity
    spec:
      containers:
      - image: soloio/session-affinity-app:0.0.3
        name: session-affinity
        ports:
        - containerPort: 8080
        resources:
          requests:
            cpu: "100m"
          limits:
            cpu: "200m"
---
apiVersion: v1
kind: Service
metadata:
  name: session-affinity
  labels:
    service: session-affinity
spec:
  ports:
  - name: http
    port: 8080
    protocol: TCP
  selector:
    app: session-affinity
---
apiVersion: gateway.solo.io/v1
kind: VirtualService
metadata:
  name: session-affinity
spec:
  virtualHost:
    domains:
    - app
    routes:
    - matchers:
      - exact: /session_path/count
      name: count-affinity
      routeAction:
        single:
          kube:
            port: 8080
            ref:
              name: session-affinity
              namespace: default
      options:
        prefixRewrite: /count
    - matchers:
      - exact: /non_session_path/count
      name: count-no-affinity
      routeAction:
        single:
          kube:
            port: 8080
            ref:
              name: session-affinity
              namespace: default
      options:
        prefixRewrite: /count
---
apiVersion: v1
kind: Namespace
metadata:
  name: curl
---
apiVersion: v1
kind: Pod
metadata:
  name: curl
  namespace: curl
  labels:
    app: curl
    version: v1
spec:
  containers:
    - name: curl
      image: curlimages/curl:7.83.1
      imagePullPolicy: IfNotPresent
      command:
        - "tail"
        - "-f"
        - "/dev/null"
      resources:
        requests:
          cpu: "100m"
        limits:
          cpu: "200m"
